--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
   </style>
 </head>
 <body>
-<section id="sec_home" class="fdb-block fdb-viewport bg-dark hero" style="background-image: url(banner.jpg);" data-block-type="call_to_action" data-id="2" draggable="true">
+<section id="sec_home" class="fdb-block fdb-viewport bg-dark hero" style="background-image: url(https://answertea.com.my/assets/banner.jpg);" data-block-type="call_to_action" data-id="2" draggable="true">
   <div class="container justify-content-center align-items-center d-flex">
     <div class="row justify-content-center text-center">
       <div class="col-12 col-md-8">
-        <!-- <img alt="image" class="fdb-icon" src="logo.png"> -->
+        <!-- <img alt="image" class="fdb-icon" src="https://answertea.com.my/assets/logo.png"> -->
         <!-- <img alt="image" class="fdb-icon" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/coffee.svg"> -->
         <!-- <h1>Froala Design Blocks</h1>
         <p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -109,7 +109,7 @@
         </button>
         <div class="col-11 text-center text-md-center order-lg-6 d-md-none d-lg-none d-xl-none">
             <a href="https://www.froala.com">
-              <img src="logo_down.png" height="30" alt="image">
+              <img src="https://answertea.com.my/assets/logo_down.png" height="30" alt="image">
             </a>
         </div>
         <div class="col-xl-12 col-lg-12 col-md-12 collapse navbar-collapse" id="navbarNav2">
@@ -125,7 +125,7 @@
                 </li>
                 <li class="nav-item d-none d-md-block d-lg-block d-xl-block">
                     <a class="nav-link scroll-link" href="#sec_home">
-                      <img src="logo.png" height="30" alt="image">
+                      <img src="https://answertea.com.my/assets/logo.png" height="30" alt="image">
                     </a>
                 </li>
                 <li class="nav-item text-center">
