--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>ANSWER TEA - A CUP OF TEA THAT CAN BE DIVINED.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css">svg:not(:root).svg-inline--fa{overflow:visible}.svg-inline--fa{display:inline-block;font-size:inherit;height:1em;overflow:visible;vertical-align:-.125em}.svg-inline--fa.fa-lg{vertical-align:-.225em}.svg-inline--fa.fa-w-1{width:.0625em}.svg-inline--fa.fa-w-2{width:.125em}.svg-inline--fa.fa-w-3{width:.1875em}.svg-inline--fa.fa-w-4{width:.25em}.svg-inline--fa.fa-w-5{width:.3125em}.svg-inline--fa.fa-w-6{width:.375em}.svg-inline--fa.fa-w-7{width:.4375em}.svg-inline--fa.fa-w-8{width:.5em}.svg-inline--fa.fa-w-9{width:.5625em}.svg-inline--fa.fa-w-10{width:.625em}.svg-inline--fa.fa-w-11{width:.6875em}.svg-inline--fa.fa-w-12{width:.75em}.svg-inline--fa.fa-w-13{width:.8125em}.svg-inline--fa.fa-w-14{width:.875em}.svg-inline--fa.fa-w-15{width:.9375em}.svg-inline--fa.fa-w-16{width:1em}.svg-inline--fa.fa-w-17{width:1.0625em}.svg-inline--fa.fa-w-18{width:1.125em}.svg-inline--fa.fa-w-19{width:1.1875em}.svg-inline--fa.fa-w-20{width:1.25em}.svg-inline--fa.fa-pull-left{margin-right:.3em;width:auto}.svg-inline--fa.fa-pull-right{margin-left:.3em;width:auto}.svg-inline--fa.fa-border{height:1.5em}.svg-inline--fa.fa-li{width:2em}.svg-inline--fa.fa-fw{width:1.25em}.fa-layers svg.svg-inline--fa{bottom:0;left:0;margin:auto;position:absolute;right:0;top:0}.fa-layers{display:inline-block;height:1em;position:relative;text-align:center;vertical-align:-.125em;width:1em}.fa-layers svg.svg-inline--fa{-webkit-transform-origin:center center;transform-origin:center center}.fa-layers-counter,.fa-layers-text{display:inline-block;position:absolute;text-align:center}.fa-layers-text{left:50%;top:50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);-webkit-transform-origin:center center;transform-origin:center center}.fa-layers-counter{background-color:#ff253a;border-radius:1em;-webkit-box-sizing:border-box;box-sizing:border-box;color:#fff;height:1.5em;line-height:1;max-width:5em;min-width:1.5em;overflow:hidden;padding:.25em;right:0;text-overflow:ellipsis;top:0;-webkit-transform:scale(.25);transform:scale(.25);-webkit-transform-origin:top right;transform-origin:top right}.fa-layers-bottom-right{bottom:0;right:0;top:auto;-webkit-transform:scale(.25);transform:scale(.25);-webkit-transform-origin:bottom right;transform-origin:bottom right}.fa-layers-bottom-left{bottom:0;left:0;right:auto;top:auto;-webkit-transform:scale(.25);transform:scale(.25);-webkit-transform-origin:bottom left;transform-origin:bottom left}.fa-layers-top-right{right:0;top:0;-webkit-transform:scale(.25);transform:scale(.25);-webkit-transform-origin:top right;transform-origin:top right}.fa-layers-top-left{left:0;right:auto;top:0;-webkit-transform:scale(.25);transform:scale(.25);-webkit-transform-origin:top left;transform-origin:top left}.fa-lg{font-size:1.33333em;line-height:.75em;vertical-align:-.0667em}.fa-xs{font-size:.75em}.fa-sm{font-size:.875em}.fa-1x{font-size:1em}.fa-2x{font-size:2em}.fa-3x{font-size:3em}.fa-4x{font-size:4em}.fa-5x{font-size:5em}.fa-6x{font-size:6em}.fa-7x{font-size:7em}.fa-8x{font-size:8em}.fa-9x{font-size:9em}.fa-10x{font-size:10em}.fa-fw{text-align:center;width:1.25em}.fa-ul{list-style-type:none;margin-left:2.5em;padding-left:0}.fa-ul>li{position:relative}.fa-li{left:-2em;position:absolute;text-align:center;width:2em;line-height:inherit}.fa-border{border:solid .08em #eee;border-radius:.1em;padding:.2em .25em .15em}.fa-pull-left{float:left}.fa-pull-right{float:right}.fa.fa-pull-left,.fab.fa-pull-left,.fal.fa-pull-left,.far.fa-pull-left,.fas.fa-pull-left{margin-right:.3em}.fa.fa-pull-right,.fab.fa-pull-right,.fal.fa-pull-right,.far.fa-pull-right,.fas.fa-pull-right{margin-left:.3em}.fa-spin{-webkit-animation:fa-spin 2s infinite linear;animation:fa-spin 2s infinite linear}.fa-pulse{-webkit-animation:fa-spin 1s infinite steps(8);animation:fa-spin 1s infinite steps(8)}@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes fa-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}.fa-rotate-90{-webkit-transform:rotate(90deg);transform:rotate(90deg)}.fa-rotate-180{-webkit-transform:rotate(180deg);transform:rotate(180deg)}.fa-rotate-270{-webkit-transform:rotate(270deg);transform:rotate(270deg)}.fa-flip-horizontal{-webkit-transform:scale(-1,1);transform:scale(-1,1)}.fa-flip-vertical{-webkit-transform:scale(1,-1);transform:scale(1,-1)}.fa-flip-horizontal.fa-flip-vertical{-webkit-transform:scale(-1,-1);transform:scale(-1,-1)}:root .fa-flip-horizontal,:root .fa-flip-vertical,:root .fa-rotate-180,:root .fa-rotate-270,:root .fa-rotate-90{-webkit-filter:none;filter:none}.fa-stack{display:inline-block;height:2em;position:relative;width:2.5em}.fa-stack-1x,.fa-stack-2x{bottom:0;left:0;margin:auto;position:absolute;right:0;top:0}.svg-inline--fa.fa-stack-1x{height:1em;width:1.25em}.svg-inline--fa.fa-stack-2x{height:2em;width:2.5em}.fa-inverse{color:#fff}.sr-only{border:0;clip:rect(0,0,0,0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.sr-only-focusable:active,.sr-only-focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}</style>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -77,6 +78,14 @@
   .sticky + .content {
     padding-top: 102px;
   }
+
+  .flickity-page-dots .dot.is-selected
+  /* .list-group-item.active,
+  .progress-bar,
+  .btn-success */
+  {
+    background-color: #38B6FF;
+  }
   </style>
 </head>
 <body>
@@ -135,14 +144,14 @@
                   <a class="nav-link scroll-link" href="#sec_licensing">Licensing</a>
                 </li>
                 <li class="nav-item text-center">
-                  <a class="nav-link scroll-link" href="#sec_branch">Branch</a>
+                  <a class="nav-link scroll-link" href="#sec_outlets">Outlets</a>
                 </li>
             </ul>
         </div>
     </nav>
   </div>
 </header>
-<section id="sec_gallery" class="fdb-block" data-block-type="contents" data-id="3" draggable="true">
+<section class="fdb-block" data-block-type="contents" data-id="3" draggable="true">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col col-md-8 text-center">
@@ -151,18 +160,38 @@
       </div>
     </div>
   </div>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col col-md-12 text-center">
+        <img class="img-fluid" src="https://answertea.com.my/assets/main_img_play.png" />
+      </div>
+    </div>
+  </div>
 </section>
-<section class="fdb-block" data-block-type="contents" data-id="4" draggable="true">
+<style>
+.carousel-cell-image
+{
+  width: 100%;
+}
+</style>
+<section id="sec_gallery" class="fdb-block" data-block-type="contents" data-id="4" draggable="true">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-6">
-        <img alt="image" class="img-fluid mt-5" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//draws/hosting.svg">
+      <div class="col-8">
+          <div class="login-carousel">
+              <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide1.jpeg" class="carousel-cell-image"></div>
+              <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide1.jpeg" class="carousel-cell-image"></div>
+              <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide1.jpeg" class="carousel-cell-image"></div>
+              <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide1.jpeg" class="carousel-cell-image"></div>
+              <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide1.jpeg" class="carousel-cell-image"></div>
+          </div>
       </div>
     </div>
   </div>
 </section>
 <section class="fdb-block" data-block-type="contents" data-id="5" draggable="true">
-  <div class="container">
+  <img src="https://answertea.com.my/assets/banner.join.png" class="img-fluid">
+  <div class="container mt-5">
     <div class="row">
       <div class="col text-left">
         <h2>Far far away...</h2>
@@ -188,68 +217,47 @@
 
     <div class="row text-center justify-content-center">
       <div class="col-sm-2 m-sm-auto">
-        <img alt="image" class="img-fluid rounded-circle" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//people/1.jpg">
+        <img alt="image" class="img-fluid rounded-circle" src="https://answertea.com.my/beverage/1.png">
 
-        <h3><strong>Sara Doe</strong></h3>
+        <h3><strong>百香果乳多多</strong></h3>
         <p>"Wild Question Marks, but the Little Blind"</p>
       </div>
 
       <div class="col-sm-2 m-sm-auto">
-        <img alt="image" class="img-fluid rounded-circle" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//people/6.jpg">
+          <img alt="image" class="img-fluid rounded-circle" src="https://answertea.com.my/beverage/2.png">
 
-        <h3><strong>Sara Doe</strong></h3>
+        <h3><strong>百香果桃白白</strong></h3>
         <p>"Wild Question Marks, but the Little Blind"</p>
       </div>
 
       <div class="col-sm-2 m-sm-auto">
-        <img alt="image" class="img-fluid rounded-circle" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//people/5.jpg">
+          <img alt="image" class="img-fluid rounded-circle" src="https://answertea.com.my/beverage/3.png">
 
-        <h3><strong>Sara Doe</strong></h3>
+        <h3><strong>超级百香果</strong></h3>
         <p>"Wild Question Marks, but the Little Blind"</p>
       </div>
 
       <div class="col-sm-2 m-sm-auto">
-        <img alt="image" class="img-fluid rounded-circle" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//people/8.jpg">
+          <img alt="image" class="img-fluid rounded-circle" src="https://answertea.com.my/beverage/4.png">
 
-        <h3><strong>Sara Doe</strong></h3>
+        <h3><strong>超级柠檬茉莉</strong></h3>
         <p>"Wild Question Marks, but the Little Blind"</p>
       </div>
     </div>
 
-    <div class="row justify-content-center text-center mt-5">
-      <div class="col-sm-2  m-sm-auto">
-        <img alt="image" class="img-fluid rounded-circle" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//people/3.jpg">
-
-        <h3><strong>Sara Doe</strong></h3>
-        <p>"Wild Question Marks, but the Little Blind"</p>
-      </div>
-
-      <div class="col-sm-2 m-sm-auto">
-        <img alt="image" class="img-fluid rounded-circle" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//people/9.jpg">
-
-        <h3><strong>Sara Doe</strong></h3>
-        <p>"Wild Question Marks, but the Little Blind"</p>
-      </div>
-
-      <div class="col-sm-2 m-sm-auto">
-        <img alt="image" class="img-fluid rounded-circle" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//people/7.jpg">
-
-        <h3><strong>Sara Doe</strong></h3>
-        <p>"Wild Question Marks, but the Little Blind"</p>
-      </div>
-
-      <div class="col-sm-2 m-sm-auto">
-        <img alt="image" class="img-fluid rounded-circle" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//people/2.jpg">
-
-        <h3><strong>Sara Doe</strong></h3>
-        <p>"Wild Question Marks, but the Little Blind"</p>
-      </div>
-    </div>
   </div>
 </section>
 <section id="sec_story" class="fdb-block" data-block-type="contents" data-id="7" draggable="true">
-  <div class="container">
-    <div class="row justify-content-center">
+<div class="container-fluid">
+    <div class="row">
+      <div class="col" style="background: url('https://answertea.com.my/assets/raw.1.png'); height: 100vh;background-size: cover;"></div>
+      <div class="col" style="background: url('https://answertea.com.my/assets/raw.2.png'); height: 100vh;background-size: cover;"></div>
+      <div class="col" style="background: url('https://answertea.com.my/assets/raw.3.png'); height: 100vh;background-size: cover;"></div>
+      <div class="col" style="background: url('https://answertea.com.my/assets/raw.4.png'); height: 100vh;background-size: cover;"></div>
+    </div>
+  </div>
+  <div class="container" style="background: url('https://answertea.com.my/assets/main_img_brand.png');">
+    <div class="row justify-content-center mt-5">
       <div class="col col-md-8 text-center">
         <h1>Story</h1>
         <p class="lead">A premium brand originated from China which pioneer in
@@ -259,11 +267,12 @@
           quality of the tea.</p>
       </div>
     </div>
-  </div>
-  <div class="container">
+  <!-- </div>
+  <div class="container"> -->
     <div class="row justify-content-center">
       <div class="col col-md-8 text-center">
         <h1>Speciality</h1>
+        <!-- <img alt="image" class="img-fluid rounded-circle" src="assets/main_img_brand.png"> -->
         <p class="lead">Handpicked ingredients from all around
           the world.
            Started from Japanese Yugu authentic
@@ -274,8 +283,8 @@
         </p>
       </div>
     </div>
-  </div>
-  <div class="container">
+  <!-- </div>
+  <div class="container"> -->
     <div class="row justify-content-center">
       <div class="col col-md-8 text-center">
         <h1>Taste</h1>
@@ -288,8 +297,8 @@
         </p>
       </div>
     </div>
-  </div>
-  <div class="container">
+  <!-- </div>
+  <div class="container"> -->
       <div class="row justify-content-center">
         <div class="col col-md-8 text-center">
           <h1>What Make Us Different</h1>
@@ -300,25 +309,25 @@ drinks.
           </p>
         </div>
       </div>
-    </div>
-    <div class="container">
+    <!-- </div>
+    <div class="container"> -->
         <div class="row justify-content-center">
           <div class="col col-md-8 text-center">
             <h1>How it works</h1>
             <p class="lead">
-                We introduce a new concept where our customers can ask any questions
-  that they wish and we would give a “reply” on the surface of the
-  drinks. 
+We introduce a new concept where our customers can ask any questions
+that they wish and we would give a “reply” on the surface of the
+drinks. 
             </p>
           </div>
         </div>
-      </div>
-      <div class="container">
+      <!-- </div>
+      <div class="container"> -->
           <div class="row justify-content-center">
             <div class="col col-md-8 text-center">
               <h1>Carefully Selected Tea Leaves</h1>
               <p class="lead">
-                  Quality is our guarentee.
+Quality is our guarentee.
 From choosing the type of tea
 leaves, the hand-picking process
 and roasting with other ingredients,
@@ -332,8 +341,9 @@ memory everlasting.
         </div>
 </section>
 <section id="sec_licensing" class="fdb-block" data-block-type="contents" data-id="8">
+  <img src="https://answertea.com.my/assets/banner.sentence.png" class="img-fluid">
   <div class="container">
-    <div class="row">
+    <div class="row mt-5">
       <div class="col text-left">
         <h2>Licensing</h2>
 
@@ -346,10 +356,35 @@ memory everlasting.
     </div>
   </div>
 </section>
-<footer id="sec_branch" class="fdb-block footer-large fp-active" data-block-type="footers" data-id="9">
+<section id="sec_outlets" class="fdb-block" data-block-type="contents" data-id="9">
+    <div class="container">
+        <div class="row justify-content-center">
+          <div class="col col-md-8 text-center">
+            <h1>Outlets</h1>
+            <p class="lead">EkoCheras Mall</p>
+            <p class="lead">Pinang (Coming Soon)</p>
+            <p class="lead">Selangor (Coming Soon)</p>
+            <p class="lead">Sarawak (Coming Soon)</p>
+
+            <p class="lead">Sabah (Coming Soon)</p>
+            <p class="lead">Negeri Sembilan (Coming Soon)</p>
+            <p class="lead">Terengganu (Coming Soon)</p>
+            <p class="lead">Melaka (Coming Soon)</p>
+            <p class="lead">Perlis (Coming Soon)</p>
+            <p class="lead">Pahang (Coming Soon)</p>
+            <p class="lead">Perak (Coming Soon)</p>
+            <p class="lead">Kedah (Coming Soon)</p>
+            <p class="lead">Johor (Coming Soon)</p>
+            <p class="lead">Contact Us</p>
+          </div>
+        </div>
+      </div>
+</section>
+<footer id="sec_contact" class="fdb-block footer-large fp-active" data-block-type="footers" data-id="10">
   <div class="container">
     <div class="row text-center">
       <div class="col">
+        <h2>Contact Us</h2>
         <h3>JTEA BEVERAGE PLT</h3>
         <p>LG29, Lower Ground Floor, EkoCheras Mall,<br>No 693, Batu, 5, Jalan Cheras,</p>
         <p>56000 Kuala Lumpur.</p>
@@ -399,8 +434,19 @@ memory everlasting.
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/froala-editor@2.9.1/js/froala_editor.pkgd.min.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+<!-- JavaScript -->
+<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 <script>
   $(document).ready(function() {
+
+    // login-carousel
+    var $carousel = $('.login-carousel').flickity({
+        prevNextButtons: false,
+        autoPlay: false,
+        contain: true
+    });
+
     $('a.scroll-link').click(function (e) {
         e.preventDefault();
         $id = $(this).attr('href');
