--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <img class="img-fluid" src="https://answertea.com.my/assets/main_img_play.png" />
       </div>
     </div>
+    <img src="https://answertea.com.my/assets/banner.sentence.png" class="img-fluid">
   </div>
 </section>
 <style>
@@ -341,7 +342,7 @@ memory everlasting.
         </div>
 </section>
 <section id="sec_licensing" class="fdb-block" data-block-type="contents" data-id="8">
-  <img src="https://answertea.com.my/assets/banner.sentence.png" class="img-fluid">
+  <img src="https://answertea.com.my/assets/banner.contact.png" class="img-fluid">
   <div class="container">
     <div class="row mt-5">
       <div class="col text-left">
