--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     text-decoration: none !important;
     position: absolute;
     bottom: 1rem;
-    left: 49%;
+    left: 51%;
     transform: translateX(-50%);
   }
 
@@ -141,23 +141,23 @@
                 <li class="nav-item text-center">
                     <a class="nav-link scroll-link" href="#sec_beverage">Beverage</a>
                 </li>
-                <li class="nav-item text-center">
-                    <a class="nav-link scroll-link" href="#sec_story">About</a>
-                  </li>
                 <li class="nav-item d-none d-md-block d-lg-block d-xl-block">
                     <a class="nav-link scroll-link" href="#sec_cover">
                       <img src="https://answertea.com.my/assets/logo.png" height="30" alt="image">
                     </a>
                 </li>
-                <li class="nav-item text-center">
+                <!-- <li class="nav-item text-center">
                   <a class="nav-link scroll-link" href="#sec_licensing">Licensing</a>
-                </li>
+                </li> -->
                 <li class="nav-item text-center">
-                  <a class="nav-link scroll-link" href="#sec_outlets">Outlets</a>
+                    <a class="nav-link scroll-link" href="#sec_story">About</a>
                 </li>
+                <!-- <li class="nav-item text-center">
+                  <a class="nav-link scroll-link" href="#sec_outlets">Outlets</a>
+                </li> -->
                 <li class="nav-item text-center">
                     <a class="nav-link scroll-link" href="#sec_contact">Contact</a>
-                  </li>
+                </li>
             </ul>
         </div>
     </nav>
@@ -182,35 +182,29 @@
                   <li class="nav-item text-center">
                       <a class="nav-link scroll-link" href="#sec_beverage">Beverage</a>
                   </li>
-                  <li class="nav-item text-center">
-                      <a class="nav-link scroll-link" href="#sec_story">About</a>
-                    </li>
                   <li class="nav-item d-none d-md-block d-lg-block d-xl-block">
                       <a class="nav-link scroll-link" href="#sec_cover">
                         <img src="https://answertea.com.my/assets/logo.png" height="30" alt="image">
                       </a>
                   </li>
-                  <li class="nav-item text-center">
+                  <!-- <li class="nav-item text-center">
                     <a class="nav-link scroll-link" href="#sec_licensing">Licensing</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item text-center">
-                    <a class="nav-link scroll-link" href="#sec_outlets">Outlets</a>
+                      <a class="nav-link scroll-link" href="#sec_story">About</a>
                   </li>
+                  <!-- <li class="nav-item text-center">
+                    <a class="nav-link scroll-link" href="#sec_outlets">Outlets</a>
+                  </li> -->
                   <li class="nav-item text-center">
                       <a class="nav-link scroll-link" href="#sec_contact">Contact</a>
-                    </li>
+                  </li>
               </ul>
           </div>
       </nav>
     </div>
   </header>
-<section id="sec_home" class="fdb-block bg-warning" data-block-type="contents" data-id="3" draggable="true">
-
-  <!-- <div class="row text-center justify-content-center">
-    <div class="col-8">
-      <h1>HOME</h1>
-    </div>
-  </div> -->
+<!-- <section id="sec_home" class="fdb-block bg-warning" data-block-type="contents" data-id="3" draggable="true">
 
   <div class="row-70"></div>
       
@@ -224,16 +218,16 @@
       <div class="col">
         <div class="login-carousel">
             <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide4.jpg" class="carousel-cell-image"></div>
-            <!-- <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide1.jpeg" class="carousel-cell-image"></div> -->
-            <!-- <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide2.jpg" class="carousel-cell-image"></div> -->
-            <!-- <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide3.jpeg" class="carousel-cell-image"></div> -->
-            <!-- <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide5.jpg" class="carousel-cell-image"></div> -->
+            <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide1.jpeg" class="carousel-cell-image"></div>
+            <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide2.jpg" class="carousel-cell-image"></div>
+            <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide3.jpeg" class="carousel-cell-image"></div>
+            <div class="carousel-cell"><img src="https://answertea.com.my/beverage/slide5.jpg" class="carousel-cell-image"></div>
         </div>
       </div>
     </div>
   </div>
 
-</section>
+</section> -->
 <img src="https://answertea.com.my/assets/banner.sentence.png" class="img-fluid">
 <section id="sec_gallery" class="fdb-block" data-block-type="contents" data-id="4" draggable="true">
   <div class="row text-center justify-content-center">
@@ -391,7 +385,7 @@ memory everlasting.
           </div>
         </div>
 </section>
-<section id="sec_licensing" class="fdb-block" data-block-type="contents" data-id="8">
+<!-- <section id="sec_licensing" class="fdb-block" data-block-type="contents" data-id="8">
     <div class="row text-center justify-content-center">
       <div class="col-8">
         <h1>LICENSING</h1>
@@ -428,7 +422,7 @@ memory everlasting.
         <div class="row justify-content-center">
           <div class="col col-md-8 text-center">
             <p class="lead">EkoCheras Mall</p>
-            <!-- <p class="lead">Pinang (Coming Soon)</p>
+            <p class="lead">Pinang (Coming Soon)</p>
             <p class="lead">Selangor (Coming Soon)</p>
             <p class="lead">Sarawak (Coming Soon)</p>
 
@@ -440,12 +434,12 @@ memory everlasting.
             <p class="lead">Pahang (Coming Soon)</p>
             <p class="lead">Perak (Coming Soon)</p>
             <p class="lead">Kedah (Coming Soon)</p>
-            <p class="lead">Johor (Coming Soon)</p> -->
-            <!-- <p class="lead">Contact Us</p> -->
+            <p class="lead">Johor (Coming Soon)</p>
+            <p class="lead">Contact Us</p>
           </div>
         </div>
       </div>
-</section>
+</section> -->
 <footer id="sec_contact" class="fdb-block footer-large fp-active" data-block-type="footers" data-id="10">
   <div class="row text-center justify-content-center">
       <div class="col-8">
