--- a/index.html
+++ b/index.html
@@ -554,26 +554,7 @@ memory everlasting.
             </div>
           </div>
           <div class="row justify-content-center mt-4">
-            <div class="col-12 col-lg-10">
-              <div class="form-group">
-                  <input type="text" class="form-control" placeholder="First name*">
-              </div>
-              <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Last name*">
-              </div>
-              <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Enter your contact number*">
-              </div>
-              <div class="form-group">
-                  <textarea class="form-control" rows="5" placeholder="Your enquiry here"></textarea>
-              </div>
-              <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Enter your email address*">
-                  <div class="input-group-append">
-                    <button class="btn btn-primary" type="button">Submit</button>
-                  </div>
-              </div>
-            </div>
+            <iframe src="https://app.kamfu.app/api/answertea/enquiry@answertea.com.my" style="width:100%;height:100%;border:0px;"></iframe>
           </div>
         </div>
       </div>
