--- a/index.html
+++ b/index.html
@@ -544,17 +544,8 @@ memory everlasting.
     <div class="row justify-content-end">
       <div class="col-12 col-md-9 col-lg-8">
         <div class="fdb-box fdb-touch">
-          <div class="row justify-content-center">
-            <div class="col-12 col-lg-10">
-              <!-- <h1>Subscribe</h1> -->
-              <p class="lead">Talk to Us</p>
-              <p class="lead">Own an Outlet</p>
-              <p class="lead">Forge a New partnership</p>
-              <p class="lead">Join Our Team</p>
-            </div>
-          </div>
           <div class="row justify-content-center mt-4">
-            <iframe src="https://app.kamfu.app/api/answertea/enquiry@answertea.com.my" style="width:100%;height:100%;border:0px;"></iframe>
+            <iframe src="https://app.kamfu.app/api/answertea/enquiry@answertea.com.my" style="width:100%;min-height:700px;border:0px;"></iframe>
           </div>
         </div>
       </div>
